--- a/input.scss
+++ b/input.scss
@@ -1,3 +1,9 @@
+@mixin border-shadow($property) {
+    -webkit-box-shadow: $property;
+    -moz-box-shadow: $property;
+    box-shadow: $property;
+}
+
 article {
     display: flex;
     flex-wrap: wrap;
@@ -6,9 +12,7 @@ article {
     flex-grow: 1;
     flex-basis: 45%;
     border: 1px silver solid;
-    -webkit-box-shadow: 10px 10px 19px -4px rgba(255, 255, 255, 0.75);
-    -moz-box-shadow: 10px 10px 19px -4px rgba(255, 255, 255, 0.75);
-    box-shadow: 10px 10px 19px -4px rgba(255, 255, 255, 0.75);
+    @include border-shadow(10px 10px 19px -4px rgba(255, 255, 255, 0.75));
     padding: 16px;
     margin: 16px;
     clear: both;
