--- a/css/red.css
+++ b/css/red.css
@@ -1,6 +1,6 @@
 body {
   font: 100% "Space Mono", monospace;
-  color: #2748b3;
+  color: red;
   margin: 0px;
   padding: 0px;
   background-color: #000;
@@ -35,7 +35,7 @@ article section {
           box-sizing: border-box;
 }
 
-article section #selling-points {
+article section#selling-points {
   -webkit-box-flex: 2;
       -ms-flex-positive: 2;
           flex-grow: 2;
@@ -46,7 +46,7 @@ article section #selling-points {
 article pre {
   background: #000;
   border: 1px solid #ddd;
-  color: #666;
+  color: red;
   font-family: monospace;
   font-size: 15px;
   line-height: 1.6;
@@ -71,7 +71,7 @@ article pre .after {
 h1,
 h2,
 h6 {
-  color: #6b8eff;
+  color: red;
 }
 
 h1 {
@@ -89,7 +89,7 @@ h6 {
   border: 1px solid #ccc;
   padding: 16px;
   margin: 16px;
-  color: #2748b3;
+  color: red;
   background-color: #000;
 }
 
@@ -98,20 +98,10 @@ h6 {
 }
 
 .error {
-  background-color: red;
+  background-color: #f72e2e;
 }
 
 .warning {
   background-color: orange;
-}
-
-body {
-  color: red;
-}
-
-h1,
-h2,
-h6 {
-  color: red;
 }
 /*# sourceMappingURL=red.css.map */
