--- a/css/style.scss
+++ b/css/style.scss
@@ -123,3 +123,16 @@ h6 {
   @extend %message-shared;
   background-color: orange;
 }
+
+.links {
+  text-align: center;
+  a:link, a:visited {
+    background-color: rgb(22, 20, 20);
+    color: $text-color;
+    padding: 10px 20px;
+    margin: 12px;
+  }
+  a:hover, a:active {
+    background-color: rgb(41, 37, 37);
+  }
+}
